[package]
name = "heartbeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio"] }
maud = { git = "https://github.com/annieversary/maud", rev = "e39cef7b14485d05146ea1e3da1d4b3c4e21aa9e" }
dotenv = "0.15.0"
anyhow = "1.0.75"
chrono = { version = "0.4.37", features = ["serde"] }
axum-test = "14.8.0"
assertables = "7.0.1"
serde = { version = "1.0.198", features = ["derive"] }
